[package]
name = "mdv"
version = "0.1.0"
authors = ["conner bryan <conner@bryanthorpe.com>"]
edition = "2018"

[features]
default = ["svg"]
svg = ["resvg", "mime", "tempfile"]

[dependencies]
crossterm = "0.14"
pulldown-cmark = "0.6.1"
reqwest = "^0.9"
base64 = "0.11.0"
resvg = { version = "0.8.0", features = ["cairo-backend"], optional = true  }
mime = { version = "0.3.14", optional = true }
tempfile = { version = "3.1.0", optional = true }